<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Community</string>
    <string name="General">General</string>
    <string name="Events">Events</string>
    <string name="Crime">Crime Watch</string>
    <string name="Missing">Promotions</string>
    <string name="Market">Municipal</string>
    <string name="Jobs">Sports</string>
    <string name="Specials">OutReach</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_refresh">Refresh Immediately!</string>
    <string name="title_activity_test">RefreshableListView Test Activity!</string>
    <string name="refresh_pull_down">Pull down to refresh…</string>
    <string name="refresh_release">Release to refresh…</string>
    <string name="loading">Loading…</string>
    <string name="refresh_pull_up">Pull up to refresh…</string>
    <string name="title_activity_main">Your Nearest Place</string>
    <string name="menu_settings">Settings</string>
    
    <string name="date"><b>Date Of Birth</b></string>
   <!-- slide menu               -->
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
     
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
         <item >Home Location</item>
        <item >Current Location</item>
        <item >Create Post</item>
        <item >Profile</item>
        <item >Directory</item>
        <item >Help</item>
        
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/icon2</item>
        <item>@drawable/icon1</item>
        <item>@drawable/icon3</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/places</item>
        <item>@drawable/icon5</item>
        
    </array>
     
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <!-- slide end  -->




   
    <string name="title_of_post">Welcome to your community</string>
    <string name="first_help">first help</string>
    <string name="second_help">Second Help
                                kjsaf ksdf sdkj
                                sdfds sdfjksd 
                                ;pkfds lsdf 
                                SDFL 
    </string>
    <string name="third_help">Third helphs sdfjh sdfsd
                              js sadfjkhdsf sdf ksdf 
                              fsdkj dskf dsfkj sdlk ds
                              sadfdsal sdfl dsf;l sd
                              las asf sdfljsd lfds 
                              sakjdf sdfksdfj sdfk
                              sadjk sadias dsaissa 
    </string>
    <string name="fourth_help">Fourth Help</string>
    <string name="fifth_help">Fifth Help</string>


    
    
    
    
    <string-array name="Category">
        <item>General</item>
        <item>Events</item>
        <item>Crime Watch</item>
        <item>Promotions</item>
        <item>Municipal</item>
        <item>Sports</item>
        <item>outreach</item>
        
    </string-array>

    
    
    <string-array name="spinneryear">
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
    </string-array>

    <string-array name="spinnermonth">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    
    
      <string-array name="spinnerday">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    
      
      
   
    <string name="action_settings">Settings</string>
    <string name="hint">phone number</string>
    <string name="hint2"><b>password</b></string>
    <string name="forgot">-Or-</string>
    <string name="button">SIGN IN</string>
    <string name="footer">Full name</string>
    <string name="sign">You have no account yet? <b>Sign Up</b></string>
    <string name="line">developed by Hawk Mobile</string>
    <string name="choose">Please specify gender type:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="view">View</string>
    <string name="sign2">Sign Up</string>
    <string name="address">surburb</string>
    <string name="down">Already have an account? SIGN IN</string>
    <string name="location">Submit to which Location:</string>
    <string name="home"><b>Home</b></string>
    <string name="current"><b>Current</b></string>
    <string name="category"><b>Category</b></string>
     <string name="hw"><b><i>Hawk Mobile</i></b></string>
    <string name="tel"><b>Tel : +27 3157 22529</b></string>
      <string name="sup"><b>Email : support@Hawkmobile.co.za</b></string>
    <string name="ad"><b>Address : 5th Floor SmartXchange Building</b></string>
    <string name="add2"><b>5 Walnut Road Durban 4001</b></string>
    <string name="subject"><b>Subject</b></string>
    <string name="share">Share your views with us</string>
    <string name="btnTakePicture">Capture Image</string>
    <string name="ok"><b>OK</b></string>
    <string name="registration"><b>CREATE YOUR OWN ACCOUNT</b></string>
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="heading"><b>Welcome to Post Page</b></string>
    <string name="area">whats on your mind?</string>
    <string name="post"><b>Post</b></string>
    <string name="edit"><b>Welcome to Your Profile</b></string>
    <string name="up"><b>Change your profile picture</b></string>
    <string name="line2">_______________________________________________</string>
    <string name="details"><b>Details</b></string>
    <string name="fLine">Njabulo Dlamini</string>
    <string name="phone">078 705 4123</string>
    <string name="g">Male</string>
    <string name="loc">Durban Russell street</string>
    <string name="lineUpdate"><b>Update Location</b></string>
    <string name="manage">Manage Post</string>
    <string name="hl">Home Location</string>
    
    
    
    
     <string name="bDetail"><b>Business Details</b></string>
    <string name="cd"><b>Business Profile</b></string>
    <string name="bn">Business Name :</string>
    <string name="bDescr"><b>Business Description</b></string>
    <string name="bDescr2">description of the business</string>
    <string name="bCat">Catergory :</string>
    <string name="bn2">Hawk Mobile</string>
    <string name="cn">031 714 4432</string>
    <string name="em"><i>support@Hawkmobile.co.za</i></string>
    <string name="bc">business catergory</string>
    <string name="compny">Description of company</string>
    <string name="ac">company address</string>
    <string name="rating">Company ratings</string>
    <string name="infoCo"><b>Contact Information</b></string>
    <string name="cNo">Contact Number :</string>
    <string name="em2">Email :</string>
    <string name="add">Address :</string>
    <string name="add3">5 walnut road</string>
    <string name="rates"><b>Business Ratings</b></string>
    <string name="rateM">Please rate our business:</string>
     <string name="submit">Submit</string>
    <string name="result">Results :</string>
</resources>
